# ftdcmp

./: .gitignore  CMakeLists.txt  README.md  format_source  ftdcmp.cpp  ftdcmp.hpp  ftdcmp_module.hpp
lib/FreeType/: repo-state.txt
test/: .envrc  CMakeLists.txt  build_and_run  em_build_and_run
test/lib/asserter/.ignore_git/: index
test/lib/asserter/.ignore_git/logs/refs/heads/: master
test/lib/path_comp/.ignore_git/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
test/lib/path_comp/.ignore_git/logs/refs/heads/: main
test/lib/path_comp/.ignore_git/logs/refs/remotes/origin/: HEAD  main
test/lib/path_comp/.ignore_git/objects/pack/: pack-3f6feb8cbcc3ad22a6cb51e58271a1909a4cd66e.idx  pack-3f6feb8cbcc3ad22a6cb51e58271a1909a4cd66e.pack  pack-3f6feb8cbcc3ad22a6cb51e58271a1909a4cd66e.rev  pack-4af96a539252a694e639b3ad9340cb15cf9d24fe.idx  pack-4af96a539252a694e639b3ad9340cb15cf9d24fe.pack  pack-4af96a539252a694e639b3ad9340cb15cf9d24fe.rev
test/lib/path_comp/.ignore_git/refs/heads/: main
test/src/: example.cpp  make_html_path.hpp
